--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -39,7 +39,7 @@
 
 \multicolumn{2}{c}{\tiny \#API: 10} &  &   & &    \\
 \multicolumn{2}{c}{\tiny \#Builders: 3} &  &   & &    \\
-\midrule\multicolumn{2}{c}{\textbf{LinkedList}} & 2 &  2.80 &  2 &  3   \\
+\midrule\multicolumn{2}{c}{\textbf{LinkedList}} & 2 &  2 &  2 &  2  \\
 \multicolumn{2}{c}{\tiny \#API: 67} &  &   & &   \\
 \multicolumn{2}{c}{\tiny \#Builders: 2} &  &   & &    \\
 \midrule
@@ -55,7 +55,7 @@
 \multicolumn{2}{c}{\tiny \#API: 31} &  &   & &  \\
 \multicolumn{2}{c}{\tiny \#Builders: 2} &  &   & &    \\
 \midrule
-\multicolumn{2}{c}{\textbf{HashMap}} & 2.60  & 2  &2   &2     \\
+\multicolumn{2}{c}{\textbf{HashMap}} & \cellcolor{gray!25}2.60  & 2  &2   &2     \\
 \multicolumn{2}{c}{\tiny \#API: 45} &  &   & &    \\
 \multicolumn{2}{c}{\tiny \#Builders: 2} &  &   & &   \\
 \hline
