last section in experimental

--- a/conclusiones.tex
+++ b/conclusiones.tex
@@ -3,7 +3,7 @@
 \label{cap:conclutions}
 
 La garantía de calidad del software puede mejorar considerablemente gracias a las técnicas modernas de análisis, 
-entre las cuales las técnicas de generación automática de tests juegan un papel destacado \cite{Cadar08, Luckow14, Fraser11, Pacheco07, Ma15, goGodefroid05, Marinov01, Boyapati02,Godefroid12}. 
+entre las cuales las técnicas de generación automática de tests juegan un papel destacado \cite{Cadar08, Luckow14, Fraser11, Pacheco07, Ma15, Godefroid05, Marinov01, Boyapati02,Godefroid12}. 
 Los enfoques aleatorios y basados en búsqueda han demostrado gran éxito en la generación automática de suites de prueba con excelentes métricas de cobertura y mutación. 
 Sin embargo, su naturaleza aleatoria impide caracterizar con precisión las familias de comportamientos del software que cubren los tests generados. 
 En contraste, las técnicas sistemáticas —como el \emph{model checking}, la ejecución simbólica o la generación exhaustiva acotada— permiten cubrir un conjunto preciso de comportamientos 
@@ -64,7 +64,7 @@ más efectivas y confiables en contextos reales.
 
 \cacho{Traduccion del paper Efficient Bounded Exhaustive Input Generationfrom Program APIs }
 La garantía de calidad del software puede mejorar considerablemente gracias a las técnicas modernas de análisis de software, 
-entre las cuales las técnicas de generación automática de tests juegan un papel destacado \cite{Cadar08, Luckow14, Fraser11, Pacheco07, Ma15, goGodefroid05, Marinov01, Boyapati02,Godefroid12}. 
+entre las cuales las técnicas de generación automática de tests juegan un papel destacado \cite{Cadar08, Luckow14, Fraser11, Pacheco07, Ma15, Godefroid05, Marinov01, Boyapati02,Godefroid12}. 
 Los enfoques aleatorios y basados en búsqueda han demostrado un gran éxito en la generación automática de suites de tests con muy buenas métricas de cobertura y mutación, 
 pero su naturaleza aleatoria no permite que estas técnicas caractericen con precisión las familias de comportamientos de software 
 que cubren los tests generados. Las técnicas sistemáticas, como las basadas en \emph{model checking}, ejecución simbólica 
