--- a/tables/randoopvsBeapi.tex
+++ b/tables/randoopvsBeapi.tex
@@ -1,7 +1,6 @@
 \begin{table}[H]
 \scriptsize
 \centering
-\label{tab:results-obj1}
 \begin{tabular}{ c  r  |r | r | r|r|r|r  }
   \toprule
   \textbf{GTime} & \textbf{Tool} & \textbf{Valid}  & \textbf{Invalid} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
@@ -41,7 +40,6 @@
 \begin{table}[H]
 \scriptsize
 \centering
-\label{tab:results-obj1}
 \begin{tabular}{ c  r  |r | r | r|r|r|r  }
   \toprule
   \textbf{GTime} & \textbf{Tool} & \textbf{Valid}  & \textbf{Invalid} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
@@ -80,7 +78,6 @@
 \begin{table}[H]
 \scriptsize
 \centering
-\label{tab:results-obj1}
 \begin{tabular}{ c  r  |r | r | r|r|r|r  }
   \toprule
   \textbf{GTime} & \textbf{Tool} & \textbf{Valid}  & \textbf{Invalid} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
@@ -118,7 +115,6 @@
 \begin{table}[H]
 \scriptsize
 \centering
-\label{tab:results-obj1}
 \begin{tabular}{ c  r  |r | r | r|r|r|r  }
   \toprule
   \textbf{GTime} & \textbf{Tool} & \textbf{Valid}  & \textbf{Invalid} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
@@ -126,27 +122,27 @@
 5	&	Randoop	&	-	&	-	&	356	&	4	&	39	&	38	\\
 	&	R-Serialize	&	1945	&	2875	&	184852	&	4	&	49	&	56	\\
 	&	R-Builders	&	15571	&	81103	&	6088262	&	12	&	49	&	57	\\
-	&	BEAPI	&	781	&	-	&	305375	&	3	&	49	&	56	\\
+	&	BEAPI	&	781	&	-	&	305375	&	3	&	49	&	58	\\
  \cline{2-8}															
 10	&	Randoop	&	-	&	-	&	794	&	5	&	43	&	43	\\
 	&	R-Serialize	&	3996	&	6241	&	367444	&	4	&	49	&	56	\\
 	&	R-Builders	&	26085	&	136050	&	10199236	&	19	&	49	&	58	\\
-	&	BEAPI	&		&	-	&	305375	&	3	&	49	&	56	\\
+	&	BEAPI	&	781	&	-	&	305375	&	3	&	49	&	58	\\
  \cline{2-8}															
 20	&	Randoop	&		&	-	&	1678	&	7	&	45	&	45	\\
 	&	R-Serialize	&	7463	&	12437	&	719044	&	5	&	49	&	57	\\
 	&	R-Builders	&	40989	&	214029	&	16026700	&	28	&	49	&	58	\\
-	&	BEAPI	&		&	-	&	305375	&	3	&	49	&	56	\\
+	&	BEAPI	&	781	&	-	&	305375	&	3	&	49	&	58	\\
  \cline{2-8}															
 40	&	Randoop	&		&	-	&	3432	&	11	&	47	&	50	\\
 	&	R-Serialize	&	14156	&	24838	&	1390324	&	7	&	49	&	57	\\
 	&	R-Builders	&	62051	&	323668	&	24261943	&	40	&	49	&	58	\\
-	&	BEAPI	&		&	-	&	305375	&	3	&	49	&	56	\\
+	&	BEAPI	&	781	&	-	&	305375	&	3	&	49	&	58	\\
  \cline{2-8}															
 150	&	Randoop	&		&	-	&	12950	&	31	&	47	&	55	\\
 	&	R-Serialize	&	48428	&	88638	&	4667332	&	15	&	49	&	57	\\
 	&	R-Builders	&	129365	&	677056	&	50581717	&	86	&	49	&	58	\\
-	&	BEAPI	&		&	-	&	305375	&	3	&	49	&	56	\\
+	&	BEAPI	&	781	&	-	&	305375	&	3	&	49	&	58	\\
 \midrule
 \end{tabular}
 \label{tab:linkedListTools}
@@ -156,7 +152,6 @@
 \begin{table}[H]
 \scriptsize
 \centering
-\label{tab:results-obj1}
 \begin{tabular}{ c  r  |r | r | r|r|r|r  }
   \toprule
   \textbf{GTime} & \textbf{Tool} & \textbf{Valid}  & \textbf{Invalid} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
@@ -184,7 +179,7 @@
 150	&	Randoop	&	-	&	-	&	108	&	3	&	48	&	67	\\
 	&	R-Serialize	&	76581	&	5590	&	15567913	&	149	&	110	&	120	\\
 	&	R-Builders	&	14542	&	?	&	2962873	&	46	&	119	&	128	\\
-	&	BEAPI	&	10453	&	?	&	2142873		9	&	122	&	120		\\
+	&	BEAPI	&	10453	&	?	&	2142873	&	9	&	122	&	120		\\
 \midrule
 \end{tabular}
 \label{tab:hashMapTools}
