--- a/tables/tableJPFBuilders1.tex
+++ b/tables/tableJPFBuilders1.tex
@@ -9,7 +9,7 @@ Class & Method & Scope &
 \tiny{\textbf{states}} & \tiny{\textbf{time (S)}} &
 \tiny{\textbf{states}} & \tiny{\textbf{time (S)} }\\
 \hline
-\multirow{11}{*}{HM} 
+\multirow{11}{*}{HashMap} 
 & put
  & 1 & 21& 0& 100 & 0 \\
 & & 2 & 136& 0& 235 & 0 \\
@@ -29,7 +29,7 @@ Class & Method & Scope &
 
 \hline
 
-\multirow{14}{*}{HS} 
+\multirow{14}{*}{HashSet} 
 & put
   & 1 & 11  & 0 & 30  & 0 \\
 & & 2 & 40  & 0 & 248 & 0 \\
