--- a/tables/optimizaciones.tex
+++ b/tables/optimizaciones.tex
@@ -139,7 +139,7 @@
   \bottomrule
 
 \end{tabular}
-
+\caption{Tiempos de generacion de acuerdo a las optimizaciones propuestas}
 \label{tab:results-realWorld}
 
 
